<resources>
    <string name="app_name" translatable="false">TasKing</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="change">Change</string>
    <string name="homework_please">Homework please</string>
    <string name="save">Save</string>

    <string name="add_to_this_day">Edit current day</string>
    <string name="add_to_the_next_lesson">Add new homework</string>

    <string name="done_hw">done</string>
    <string name="not_done_hw">not done</string>

    <string name="appearance">Appearance</string>
    <string name="use_dynamic_colors">Use dynamic colors</string>
    <string name="dynamic_colors_summary">Matches your app\'s colors to your wallpaper</string>
    <string name="app_theme">App theme</string>
    <string name="choose_app_theme">Choose app theme</string>
    <string name="configure_schedule">Configure schedule</string>
    <string name="animation">Animation</string>
    <string name="configure_animations">Configure animations</string>
    <string name="change_schedule">Change Schedule</string>
    <string name="add_lessons">Add lessons</string>
    <string name="add_time">Add time</string>
    <string name="delete_db">delete db</string>
    <string name="schedule_animation">Schedule animation</string>
    <string name="change_animation_of_schedule_enter">Change animation of schedule enter</string>
    <string name="change_animation_of_homework_enter">Change animation of homework enter</string>
    <string name="homework_animation">Homework animation</string>
    <string name="delete_temporal_schedule">Delete temporal schedule</string>
    <string name="delete_homework">Delete homework</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="delete_time_list">Delete time list</string>
    <string name="delete_lesson_list">Delete lesson list</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="add_lesson">Add lesson</string>
    <string name="delete_this_lesson">Delete this lesson?</string>
    <string name="delete_confirm">Are you sure you want to delete this?</string>
    <string name="delete">Delete</string>
    <string name="edit_lesson">Edit lesson</string>
    <string name="write_lesson">Write lesson</string>
    <string name="delete_this_time">Delete this time?</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="search">Search</string>
    <string name="chip_done">Is it done?</string>
    <string name="chip_lesson">Which lesson?</string>
    <string name="chip_date">Which date?</string>
    <string name="chip_image">With image?</string>
    <string name="chip_sort">Sort</string>
    <string name="home_fab">Home</string>
    <string name="all_days">All days</string>
    <string name="from_today_and_beyond">From today and beyond</string>
    <string name="from_past_to_today">From past to today</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="not_done">Not done</string>
    <string name="sort_by_field">Sort by field</string>
    <string name="date">Date</string>
    <string name="homework_sort">Homework</string>
    <string name="lesson_sort">Lesson</string>
    <string name="with_image">With image</string>
    <string name="without_image">Without image</string>
    <string name="sort_order">Sort order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="marked_as_undone">Marked as undone</string>
    <string name="undo">Undo</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_for_were_denied_the_app_may_not_work_properly">Permission for %1$s were denied. The app may not work properly.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="write_homework">Write homework</string>
    <string name="this_homework_already_exists">This homework already exists, change date</string>
    <string name="delete_item_s">Delete %1$s item(s)?</string>
    <string name="due_date">\nDue date</string>
    <string name="selected">%1$s selected</string>
    <string name="select_date">select date</string>
    <string name="delete_those_items">Delete those items?</string>
    <string name="choose_from_galery">choose from galery</string>
    <string name="take_a_picture">take a picture</string>
    <string name="of">" of "</string>
    <string name="save_the_changes">Save the changes</string>
    <string name="alpha">Alpha</string>
    <string name="_0_invisible_n1_fully_visible"><![CDATA[0 -> invisible \n1 -> fully visible]]></string>
    <string name="scale">Scale</string>
    <string name="x_horizontal">X : Horizontal</string>
    <string name="y_vertical">Y : Vertical</string>
    <string name="duration">Duration</string>
    <string name="duration_summary">duration of animation in milliseconds</string>
    <string name="translation">Translation</string>
    <string name="pivot">Pivot</string>
    <string name="in_between_keyframe">In between keyframe</string>
    <string name="choose_interpolator">Choose interpolator</string>
    <string name="accelerate">Accelerate</string>
    <string name="accelerate_decelerate">Accelerate decelerate</string>
    <string name="anticipate">Anticipate</string>
    <string name="anticipate_overshoot">Anticipate overshoot</string>
    <string name="bounce">Bounce</string>
    <string name="decelerate">Decelerate</string>
    <string name="fast_out_slow_in">Fast out slow in</string>
    <string name="fast_out_linear_in">Fast out linear in</string>
    <string name="linear_out_slow_in">Linear out Slow in</string>
    <string name="linear">Linear</string>
    <string name="overshoot">Overshoot</string>
    <string name="turned_on">Turned on</string>
    <string name="turned_off">Turned off</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="homework">Homework</string>
    <string name="share_options">Share options</string>
    <string name="share_all">Share all</string>
    <string name="share_only_text">Share only text</string>
    <string name="share_only_photo">Share only photo</string>
    <string name="share">Share</string>
    <string name="lesson">Lesson</string>
    <string name="system_default">System Default</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="choose_language">Choose language</string>
    <string name="marked_as_done">Marked as done</string>
    <string name="homework_added_for">Homework added for %1$s</string>
    <string name="set_to">%1$s</string>
    <string name="pls_restart_the_app_to_apply_changes">Restart the app to apply changes</string>
    <string name="_13_september">13 September</string>
    <string name="add_homework">Add homework</string>
    <string name="no_images_to_share">No images to share</string>
    <string name="edit_homework">Edit homework</string>
    <string name="lesson_picker">Lesson picker</string>
    <string name="add_a_new_lesson_or_choose_from_the_list">Add a new lesson or choose from the list</string>
    <string name="edit_mode">Edit mode</string>
    <string name="click_on_lesson_to_edit_it">Click on lesson to edit it</string>
    <string name="delete_mode">Delete mode</string>
    <string name="click_on_lesson_to_delete_it">Click on lesson to delete it</string>
    <string name="click_on_time_to_edit_it">Click on time to edit it</string>
    <string name="click_on_time_to_delete_it">Click on time to delete it</string>
    <string name="clear_time">Clear time</string>
    <string name="lesson_please">Lesson please</string>
    <string name="add">Add</string>
    <string name="choose_time_from_the_list">Add a new time or choose from the list</string>
    <string name="add_change_time">Time picker</string>
    <string name="edit">Edit</string>
    <string name="time">+ time</string>
    <string name="on_even">+ on even</string>
    <string name="clear_lesson">Clear lesson</string>
    <string name="schedule_settings">Schedule settings</string>
    <string name="system">system</string>
    <string name="light">light</string>
    <string name="dark">dark</string>

    <string name="dark_entr">Dark</string>
    <string name="light_entr">Light</string>
    <string name="sorting_options">Sorting options</string>
    <string name="welcome_to_tasking">Welcome to TasKing</string>
    <string name="go_to_the_settings_to_configure_schedule">Go to the Settings to configure schedule</string>
    <string name="ok">OK</string>
    <string name="day_schedule">Day Schedule</string>
    <string name="widget_settings">Widget settings</string>
    <string name="transparency">Transparency</string>

</resources>