<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    >


    <ImageButton
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/closeBtnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_close_24"
        android:backgroundTint="@android:color/transparent"
        app:tint="?attr/colorOnSurface"
        />

    <TextView
        android:id="@+id/shareOpt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/closeBtnShare"

        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_options"
            />

    <RadioGroup
        android:layout_marginVertical="16dp"
        android:id="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@id/shareOpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:checked="true"
            android:id="@+id/share_all"
            android:text="@string/share_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/share_text"
            android:text="@string/share_only_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/share_photo"
            android:text="@string/share_only_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="16dp"
        android:id="@+id/share_button"
        android:text="@string/share"
        app:cornerRadius="5dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>