<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chip_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expanded="true"
        android:background="@android:color/transparent"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@android:color/transparent"
            >

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/chip_blur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <HorizontalScrollView
                    app:layout_collapseMode="parallax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <com.google.android.material.chip.ChipGroup
                        android:visibility="visible"
                        android:id="@+id/chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="13dp">
                        <com.google.android.material.chip.Chip
                            android:checked="true"
                            android:id="@+id/chipDone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_done"/>
                        <com.google.android.material.chip.Chip
                            android:checked="true"
                            android:id="@+id/chipLesson"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_lesson"/>
                        <com.google.android.material.chip.Chip
                            android:checked="true"
                            android:id="@+id/chipDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_date"/>
                        <com.google.android.material.chip.Chip
                            android:checked="true"
                            android:id="@+id/chipImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_image"/>
                        <com.google.android.material.chip.Chip
                            android:checked="true"
                            android:id="@+id/chipSort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_sort"/>
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>
            </eightbitlab.com.blurview.BlurView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>