<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<!--    <EditText-->
<!--        android:id="@+id/noteInput"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Write homework"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/addButton"-->
<!--        app:layout_constraintBottom_toTopOf="@id/toggleGroup"/>-->


    <ImageButton
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/closeBtnBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_close_24"
        android:backgroundTint="@android:color/transparent"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/tvHomeworkBot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/closeBtn"

        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_homework"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop ="5dp"
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHomeworkBot"
        app:errorEnabled="false"
        app:errorIconDrawable="@drawable/outline_error_24"
        android:hint="@string/homework_please"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:id="@+id/noteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/ElevetedButtonSmallCorners"
        android:id="@+id/addButton"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_marginTop="5dp"
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editDayButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_this_day"
            style="@style/Widget.Material3.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addNewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_the_next_lesson"
            style="@style/Widget.Material3.Button.OutlinedButton" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>